# eashy

./: .gitignore  Cargo.toml  LICENSE  README.md  default.kdl  example.kdl  example.sh  install.sh  release.sh
src/: cli.rs  command.rs  include.sh  main.rs  parser.rs  shell_generator.rs
