[package]
name = "eashy"
version = "0.1.1"
edition = "2021"
description = "No more hassle writing shell functions! Easy subcommands and help documentation"
license = "Apache-2.0"
repository = "https://github.com/jilchab/eashy"
homepage = "https://github.com/jilchab/eashy"
documentation = "https://docs.rs/eashy"
readme = "README.md"
keywords = ["shell", "cli", "subcommands", "automation", "kdl"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Jil Chabaro <jilchabaro@gmail.com>"]

[dependencies]
anyhow = "1.0"
dirs = "6.0"
kdl = "6.3"
clap = { version = "4.5", features = ["derive"] }
